@@ -153,13 +153,17 @@ class Skin extends Linker {
 	}
 
 	function initPage( &$out ) {
-		global $wgFavicon, $wgScriptPath, $wgSitename, $wgContLang;
+		global $wgFavicon, $wgAppleTouchIcon, $wgScriptPath, $wgSitename, $wgContLang;
 
 		wfProfileIn( __METHOD__ );
 
 		if( false !== $wgFavicon ) {
 			$out->addLink( array( 'rel' => 'shortcut icon', 'href' => $wgFavicon ) );
 		}
+		
+		if( false !== $wgAppleTouchIcon ) {
+			$out->addLink( array( 'rel' => 'apple-touch-icon', 'href' => $wgAppleTouchIcon ) );
+		} 		
 
 		$code = $wgContLang->getCode();
 		$name = $wgContLang->getLanguageName( $code );
